feat: 스케쥴 워크플로우 추가

--- a/serverless.scheduler.yml
+++ b/serverless.scheduler.yml
@@ -1,5 +1,5 @@
 service: serverless-scheduler
-frameworkVersion: "3"
+frameworkVersion: '3'
 
 provider:
   name: aws
@@ -10,16 +10,16 @@ provider:
   logRetentionInDays: 30
 
 plugins:
-  - "serverless-step-functions"
-  - "serverless-webpack"
-  - "serverless-iam-roles-per-function"
+  - 'serverless-step-functions'
+  - 'serverless-webpack'
+  - 'serverless-iam-roles-per-function'
 custom:
   webpack:
-    webpackConfig: "webpack.config.js"
+    webpackConfig: 'webpack.config.js'
     includeModules:
       forceExclude:
         - aws-sdk
-    packager: "npm"
+    packager: 'npm'
     excludeFiles: .git
 
 functions:
@@ -36,16 +36,61 @@ stepFunctions:
       name: serverlessScheduler
       definition:
         Comment: serverless scheduler
-        StartAt: firstState
+        StartAt: translateSchedule
         States:
-          firstState:
+          translateSchedule:
             Type: Task
             Resource: arn:aws:states:::lambda:invoke
-            OutputPath: "$.Payload"
+            OutputPath: '$.Payload'
             Parameters:
               FunctionName:
                 Fn::GetAtt: [scheduler, Arn]
               Payload:
-                body.$: "$"
-                context.$: "$$"
-            End: true
+                body.$: '$'
+                context.$: '$$'
+            Next: Wait
+          Wait:
+            Type: Wait
+            Next: Parallel
+            TimestampPath: '$.schedule.timestamp'
+          Parallel:
+            Type: Parallel
+            Next: isScheduleStop
+            Branches:
+              - StartAt: publishMessage
+                States:
+                  publishMessage:
+                    Type: Task
+                    Resource: arn:aws:states:::lambda:invoke
+                    OutputPath: '$.Payload'
+                    Parameters:
+                      FunctionName:
+                        Fn::GetAtt: [scheduler, Arn]
+                      Payload:
+                        body.$: '$'
+                        context.$: '$$'
+                    Next: publishSuccess
+                  publishSuccess:
+                    Type: Succeed
+              - StartAt: GetScheduleStatus
+                States:
+                  GetScheduleStatus:
+                    Type: Task
+                    Resource: arn:aws:states:::lambda:invoke
+                    OutputPath: '$.Payload'
+                    Parameters:
+                      FunctionName:
+                        Fn::GetAtt: [scheduler, Arn]
+                      Payload:
+                        body.$: '$'
+                        context.$: '$$'
+                    End: true
+          isScheduleStop:
+            Type: Choice
+            Choices:
+              - Variable: '$.nextSchedule'
+                IsNull: true
+                Next: EndJob
+            Default: translateSchedule
+          EndJob:
+            Type: Succeed
