fix: 루프 조건 변경

--- a/serverless.scheduler.yml
+++ b/serverless.scheduler.yml
@@ -78,7 +78,7 @@ stepFunctions:
           isScheduleStop:
             Type: Choice
             Choices:
-              - Variable: '$.scheduledAt'
+              - Variable: '$.isScheduleStop'
                 IsNull: true
                 Next: EndJob
             Default: TranslateSchedule
