--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1244.0",
+    "cron": "^2.1.0",
     "node-fetch": "2.6.7",
     "source-map-support": "^0.5.21"
   }
