--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
+    "@types/cron": "^2.0.0",
     "@types/node-fetch": "2.x",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-step-functions": "^3.11.1",
