--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "scripts": {
+    "dev:api": "sls offline start --config ./serverless.api.yml"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
     "@types/cron": "^2.0.0",
     "@types/node-fetch": "2.x",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-offline": "^12.0.3",
     "serverless-step-functions": "^3.11.1",
     "serverless-webpack": "^5.10.0",
     "ts-loader": "^9.4.1",
@@ -15,7 +19,9 @@
   "dependencies": {
     "aws-sdk": "^2.1244.0",
     "cron": "^2.1.0",
+    "express": "^4.18.2",
     "node-fetch": "2.6.7",
+    "serverless-http": "^3.1.0",
     "source-map-support": "^0.5.21"
   }
 }
