feat: reository 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "paths": {
       "@src/*": ["*"],
       "@controller/*": ["controller/*"],
-      "@service/*": ["service/*"]
+      "@service/*": ["service/*"],
+      "@repository/*": ["repository/*"]
     }
   },
   "include": ["**/*.ts"],
