--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.1244.0",
     "cron": "^2.1.0",
+    "dynamodb-toolbox": "^0.6.3",
     "express": "^4.18.2",
     "node-fetch": "2.6.7",
     "serverless-http": "^3.1.0",
