--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
     "@types/cron": "^2.0.0",
+    "@types/express": "^4.17.15",
     "@types/node-fetch": "2.x",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^12.0.3",
